Ensure context menu text is left aligned.

--- a/static/flatmap-viewer.css
+++ b/static/flatmap-viewer.css
@@ -24,6 +24,7 @@ ul.flatmap-contextmenu {
     margin: 0;
     font-size: 1.2em;
     border: 1px solid #888;
+    text-align: left;
 }
 li.flatmap-contextmenu-item:hover {
     background: #58E;
